# mann-pytorch

./: .gitignore  README.md  requirements.txt  setup.cfg
models/storage_20220909-131438/logs/: events.out.tfevents.1662729283.iiticublap185.1162.0
models/storage_20220909-131438/normalization/: X_mean.txt  X_std.txt  Y_mean.txt  Y_std.txt
scripts/: convert_to_onnx.py  testing.py  training.py
src/mann_pytorch/: DataHandler.py  GatingNetwork.py  MANN.py  MotionPredictionNetwork.py  utils.py
